src-tauri/out.txt
    Checking plaqsegdesktop v0.1.0 (C:\Users\Student\git\PlaqSegDesktop\src-tauri)
warning: unused import: `anyhow`
 --> src\lib.rs:1:14
  |
1 | use anyhow::{anyhow, Context, Result};
  |              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ImageBuffer` and `Rgb`
 --> src\lib.rs:2:45
  |
2 | use image::{DynamicImage, GenericImageView, ImageBuffer, Rgb};
  |                                             ^^^^^^^^^^^  ^^^

warning: unused imports: `ArrayView`, `Array`, and `s`
 --> src\lib.rs:3:15
  |
3 | use ndarray::{s, Array, Array4, ArrayView};
  |               ^  ^^^^^          ^^^^^^^^^

warning: unused import: `builder::SessionBuilder`
 --> src\lib.rs:6:15
  |
6 |     session::{builder::SessionBuilder, Session},
  |               ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `PathBuf` and `collections::HashMap`
  --> src\lib.rs:12:5
   |
12 |     collections::HashMap,
   |     ^^^^^^^^^^^^^^^^^^^^
13 |     path::{Path, PathBuf},
   |                  ^^^^^^^

error[E0308]: mismatched types
   --> src\lib.rs:168:20
    |
168 |             if let Ok(ep) = CUDAExecutionProvider::default().build() { eps.push(ep); }
    |                    ^^^^^^   ---------------------------------------- this expression has type `ExecutionProviderDispatch`
    |                    |
    |                    expected `ExecutionProviderDispatch`, found `Result<_, _>`
    |
    = note: expected struct `ExecutionProviderDispatch`
                 found enum `Result<_, _>`

error[E0308]: mismatched types
   --> src\lib.rs:169:20
    |
169 |             if let Ok(ep) = DirectMLExecutionProvider::default().build() { eps.push(ep); }
    |                    ^^^^^^   -------------------------------------------- this expression has type `ExecutionProviderDispatch`
    |                    |
    |                    expected `ExecutionProviderDispatch`, found `Result<_, _>`
    |
    = note: expected struct `ExecutionProviderDispatch`
                 found enum `Result<_, _>`

error[E0277]: the `?` operator can only be applied to values that implement `Try`
   --> src\lib.rs:176:17
    |
176 |                 CUDAExecutionProvider::default().build()?,
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `ExecutionProviderDispatch`
    |
    = help: the trait `Try` is not implemented for `ExecutionProviderDispatch`

error[E0277]: the `?` operator can only be applied to values that implement `Try`
   --> src\lib.rs:181:17
    |
181 |                 DirectMLExecutionProvider::default().build()?,
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `ExecutionProviderDispatch`
    |
    = help: the trait `Try` is not implemented for `ExecutionProviderDispatch`

warning: unused import: `Manager`
  --> src\lib.rs:20:33
   |
20 | use tauri::{AppHandle, Emitter, Manager, State};
   |                                 ^^^^^^^

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: `plaqsegdesktop` (lib) generated 6 warnings
error: could not compile `plaqsegdesktop` (lib) due to 4 previous errors; 6 warnings emitted
